octagons/tests/klee-out-1/test000001.pc
array number of constraints[8] : w32 -> w8 = symbolic
array number of variables[2] : w32 -> w8 = symbolic
(query [(Eq false
             (Eq 0
                 (And w32 (ZExt w32 (Sle 3
                                         N0:(ZExt w32 (ReadLSB w16 0 number of variables))))
                          (ZExt w32 (Slt N0 10)))))
         (Eq false
             (Eq 0
                 (And w32 (ZExt w32 (Ult 0
                                         N1:(ReadLSB w64 0 number of constraints)))
                          (ZExt w32 (Ult N1 10)))))]
        false)
